# beeOS

./: Cargo.toml  LICENCE  README.md  x86_64-minimal_os.json
asm/: Makefile
asm/src/arch/x86_64/: boot.asm  cpuid_check.asm  error.asm  error_codes.asm  gdt.asm  link.ld  longmode_check.asm  longmode_initialise.asm  multiboot_check.asm  multiboot_header.asm  stack.asm
asm/src/iso/boot/grub/: grub.cfg
iso/boot/grub/: grub.cfg
rust/: .editorconfig  Cargo.toml  build.sh  rustfmt.toml  x86_64-beeos.json
rust/beeos/: Cargo.toml  Makefile
rust/beeos/src/: bee_movie.rs  cpu_exceptions.rs  lib.rs  vga.rs
rust/src/: cmos.rs  cpu_exceptions.rs  lib.rs  portio.rs  vga.rs
src/: cmos.rs  cpu_exceptions.rs  main.rs  portio.rs
