[package]
name = "beeos"
version = "0.1.0"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]

[dependencies]
volatile = "^0.2"
spin = "^0.4"
x86_64 = "^0.2"

[dependencies.lazy_static]
version = "^1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-minimal_os.json"
