[package]
name = "beeos"
version = "0.1.0"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

[dependencies]
rlibc = "^1.0"
volatile = "^0.2"
spin = "^0.4"
x86_64 = "^0.2"

[dependencies.lazy_static]
version = "^1.1"
features = ["spin_no_std"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
